# monochroma

./: Cargo.toml  README.md  regen_gl_bindings.sh
examples/: show_font.rs  show_netpbm.rs  show_pbm.rs
src/: lib.rs  rectangle.rs
src/bitmap/: font.rs  mod.rs  netpbm.rs  pbm.rs
src/bitmap/draw/: blit.rs  mod.rs  pattern.rs  shapes.rs  transfer.rs
src/display/: fragment.glsl  fragment_box.glsl  gl31.rs  glerr.rs  mod.rs  used_identifiers.txt  vertex.glsl
