[package]
name = "monochroma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
backtrace = {version = "0.3.69", optional = true}
libc = {version = "0.2.149", optional = true}
log = {version = "0.4.20", optional = true}
#sdl2 = {version = "0.35.2", optional = true}
#sdl2-sys = {version = "0.35.2", optional = true}
# precise_y is not exposed in 0.35.2, will be in next version
sdl2 = {git="https://github.com/rust-sdl2/rust-sdl2.git", rev="1b68845", optional=true}
sdl2-sys = {git="https://github.com/rust-sdl2/rust-sdl2.git", rev="1b68845", optional=true}

[features]
default = []
display = ["backtrace", "libc", "log", "sdl2", "sdl2-sys"]
font = []
netpbm = []

[[example]]
name = "show_font"
required-features = ["display", "font"]

[[example]]
name = "show_netpbm"
required-features = ["display", "netpbm"]